tests/ui/foreign_class.stderr
Error [E0021]: types are written with `struct`, not `class`
  --> tests/ui/foreign_class.lex:1:1
    |
  1 | class Point {
    | ^^^^^
 Why: Lex uses exactly one spelling for each thing, so all code reads the same
 Fix: replace `class` with `struct`

Error [E0003]: expected the keyword `struct` to start a struct definition, found the name `Point`
  --> tests/ui/foreign_class.lex:1:7
    |
  1 | class Point {
    |       ^^^^^
 Why: the structure here isn't what the compiler expected
 Fix: use the keyword `struct` to start a struct definition
