tests/ui/foreign_class.lex
class Point {
    x: Int;
}

fn main() {}
